deploy/k8s/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-mysql
  labels:
    app.kubernetes.io/name: hive
    app.kubernetes.io/component: mysql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hive
    app.kubernetes.io/component: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
